Fix product feed image layout shift

--- a/front-end/src/App/utilStyles.module.css
+++ b/front-end/src/App/utilStyles.module.css
@@ -128,10 +128,6 @@
   margin-bottom: 0.8em;
 }
 
-.image {
-  max-width: 100%;
-}
-
 
 /* ===== Font Size & Weight ===== */
 
