--- a/front-end/src/features/products/ProductFeedItem.module.css
+++ b/front-end/src/features/products/ProductFeedItem.module.css
@@ -3,11 +3,16 @@
 }
 
 .image {
-  border-bottom: 1px solid rgb(240, 240, 240);
+  /* https://web.dev/articles/aspect-ratio#example_preventing_layout_shift */
+  width: 100%;
+  height: auto;
+  max-width: 550px;
+  aspect-ratio: 1 / 1;
 }
 
 .textContainer {
   padding: 0.8em 6% 1.4em 6%;
+  border-top: 1px solid rgb(240, 240, 240);
   color: rgb(15, 17, 17);
 }
 
